# KeepTrack-CLI

./: .gitignore  Cargo.toml  README.md  current_list.txt  todo_list.json
list/: Cargo.toml
list/src/: lib.rs
src/: file_management.rs  list_features.rs  list_maintenance.rs  main.rs  not_in_list_error.rs  test.rs  todo_struct.rs  user_handling.rs
