[package]
name = "CommandLineTodoList"
version = "0.1.0"
edition = "2021"

[dependencies]
text_io = "0.1.12"
serde = {version = "1.0.203", features = ["serde_derive"]}
serde_json = "1.0.117"
colored = "2.1.0"
dir = "0.1.2"
rustyline = "14.0.0"
rand = "0.7.3"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"

